# maas-research

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  thesis.ipynb
kt_dir/taxi_lstm/: oracle.json
kt_dir/taxi_lstm/trial_00/: trial.json
kt_dir/taxi_lstm/trial_01/: trial.json
kt_dir/taxi_lstm/trial_02/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_03/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_04/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_05/: trial.json
kt_dir/taxi_lstm/trial_06/: trial.json
kt_dir/taxi_lstm/trial_07/: trial.json
kt_dir/taxi_lstm/trial_08/: trial.json
kt_dir/taxi_lstm/trial_09/: trial.json
kt_dir/taxi_lstm/trial_10/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_11/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_12/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_13/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_14/: trial.json
kt_dir/taxi_lstm/trial_15/: trial.json
kt_dir/taxi_lstm/trial_16/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_17/: trial.json
kt_dir/taxi_lstm/trial_18/: checkpoint.weights.h5  trial.json
kt_dir/taxi_lstm/trial_19/: trial.json
learn/: MaaS_Thesis_Notebook (2).ipynb
notebook/: DCRNN_COLAB.ipynb  thesis.ipynb
outputs/results/: gbm_results.csv  lstm_simple_results.csv  prophet_final_results.csv
