[project]
name = "maas-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "keras-tuner>=1.4.8",
    "libpysal>=4.14.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pmdarima>=2.1.1",
    "polars>=1.39.3",
    "prophet>=1.3.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
